<resources>
    <string name="app_name">The 2048</string>
    <string name="rules_title">Правила</string>
    <string name="rules">Габриэль Черулли, создатель игры, предлагает игрокам поле с 16 клеточками, на котором с каждым ходом появляется цифра два или четыре. Суть заключается в том, что нужно объединять квадратики с одинаковыми значениями до тех пор, пока не получиться цифра 2048.</string>
    <string name="start_button" >Начать игру</string>
    <string name="retry_button" >Повторить</string>
    <string name="timer_label">Время: %s</string>
    <string name="reset_label">Reset</string>
    <string name="undo_label">Undo</string>
    <string name="score_label">Очки</string>
    <string name="bestscore_label">Лучший</string>
    <string name="okay_label">OK</string>
    <string name="cancel_label">Отмена</string>
    <string name="would_like_repeat_again">Хотите повторить попытку?</string>
    <string name="game_over">Игра завершена. Счёт: %s</string>
    <string name="reset_field">Сбросить</string>
    <string name="credits">Kirill Bogomolov 2022</string>
</resources>